# -ESP32-C3-

./: partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  font_weather_big.c  img_set.c  img_temp.c  img_weather.c  img_wifi_off.c  key.c  key.h  lcd.c  lcd.h  lvgl_page.c  lvgl_page.h  main.c  myi2c.h  temp.c  temp.h  wife.c  wife.h  wifi.c  wifi.h
main/lvgl_img_font/: font_Led.c  font_Led_sec.c  font_alipuhui.c  font_passwd.c  img_inlock.c  img_wifi.c
