
idf_component_register(SRCS "wifi.c" "font_passwd.c" "img_wifi_off.c" "img_wifi.c" "font_weather_big.c" "font_Led_sec.c" "font_Led.c" "font_alipuhui.c" "main.c" "temp.c" "key.c" "img_inlock.c" "img_set.c" "img_main.c" "img_temp.c" "img_weather.c" "lvgl_page.c" "lock.c" "lcd.c" "myi2c.c"
                       INCLUDE_DIRS ".")
