
idf_component_register(SRCS "wifi.c" "lvgl_img_font/font_passwd.c" "lvgl_img_font/img_wifi_off.c" "lvgl_img_font/img_wifi.c" "lvgl_img_font/font_weather_big.c" "lvgl_img_font/font_Led_sec.c" "lvgl_img_font/font_Led.c" "lvgl_img_font/font_alipuhui.c" "main.c" "temp.c" "key.c" "lvgl_img_font/img_inlock.c" "lvgl_img_font/img_set.c" "lvgl_img_font/img_main.c" "lvgl_img_font/img_temp.c" "lvgl_img_font/img_weather.c" "lvgl_page.c" "lvgl_img_font/lock.c" "lcd.c" "myi2c.c"
                       INCLUDE_DIRS "." "lvgl_img_font")
